[package]
name = "etvr-eye3d"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
roots = "0.0.8"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
assert_float_eq = "1.1.3"
lazy_static = "1.4.0"
serde_json = "1.0.96"
